# MapSense

./: log_h264_mp4.py  mocap_parser.py  rosbag_to_hdf5.py
Data/: IHMC_Run_1.csv  IHMC_Run_1_Extracted.csv  IHMC_Run_1_Format.txt  IHMC_Run_3.csv  ISR_Run_1.csv  ISR_Run_2.csv  ISR_Run_3.csv  ISR_Run_4.csv  ISR_Run_5.csv  ISR_Run_6.csv  ISR_Run_7.csv  Planes_1.csv  Planes_2.csv  mocap_parser.py
FactorGraphWrapper/: CMakeLists.txt
FactorGraphWrapper/factor_graph/: factor_graph_handler.cpp  factor_graph_handler.h
FactorGraphWrapper/launcher/: application.cpp
FactorGraphWrapper/src/: FactorGraphHandler.cpp
Python/: PlanarRegionSLAM.py  README.md  drake_loader.py  log_h264_mp4.py  mocap_parser.py
Python/SLAM/: LegVisualInertialSLAM.py  VisualSLAM
Python/Scripts/: hdf5_loader.py  install-drake.sh  java_file_parser.py  robot_visualizer.py
Python/VL/: Vision-Language Models.ipynb
